--- a/site.css
+++ b/site.css
@@ -1,14 +1,19 @@
 body{
 	font-family: "Crimson Text", sans-serif;
-	background-color: #f2fffc;
+	background-color: #F2FFFC;
+	font-size: 120%
 }
 
 main h1{
-	font-size: 60px;
 	background-color: #851944;
-	color: #fff;
+	color: #FFF;
 	text-align: center;
 }
+
+main a{
+	color: #851994;
+}
+
 h1, h2{
 	font-family: "Open Sans Condensed", sans-serif;
 }
@@ -16,3 +21,22 @@ h1, h2{
 p{
 	text-align: justify;
 }
+
+blockquote {
+	background-color: #D9E5E3;
+}
+
+aside {
+	background-color: #3C1D3D;
+	color: inherit;
+	font-family: "Open Sans Condensed", sans-serif;
+}
+footer{
+	background-color: black;
+	color: #F2FFFC;
+}
+
+nav a{
+	color: #F2FFFC;
+}
+
