--- a/css/site.css
+++ b/css/site.css
@@ -1,63 +1,86 @@
-*{
-	margin: 0px;
-}
-body{
-	font-family: "Crimson Text", sans-serif;
+body {
+	font-family: "Crimson Text", "Times New Roman", serif;
 	background-color: #F2FFFC;
 	font-size: 120%;
 	line-height: 1.5;
 }
 
-main h1{
+h1, h2 {
+	font-family: "Open Sans Condensed", "Arial", sans-serif;
+}
+
+main h1 {
+	text-align: center;
 	background-color: #851944;
 	color: #FFF;
-	text-align: center;
 	padding: 25px;
 	border-bottom: 10px solid black;
+	font-size: 60px;
 }
 
-main a{
-	color: #851994;
-}
-
-main div {
-	width: 720px;
-	margin:auto;
-}
-
-aside div{
-	text-align: center;
-}
-
-h1, h2{
-	font-family: "Open Sans Condensed", sans-serif;
-}
-
-p{
+p {
 	text-align: justify;
+	margin: 20px 0;
 }
 
 blockquote {
 	background-color: #D9E5E3;
-	padding: 16px;	
 	border: 10px solid #C2CCCA;
-	width: 250px	;
+	width: 250px;
 	box-sizing: border-box;
+	margin: 20px 40px;
 }
 
 aside {
 	background-color: #3C1D3D;
 	color: #F2FFFC;
+}
+
+footer {
+	background-color: #000;
+	color: #F2FFFC;
+}
+
+nav a {
+	color: #F2FFFC;
+}
+
+main a {
+	color: #851944;
+}
+
+aside a {
+	color: inherit;
 	font-family: "Open Sans Condensed", sans-serif;
 }
-footer{
-	background-color: black;
-	color: #F2FFFC;
+
+blockquote, aside, footer {
+    padding: 20px;
 }
 
-nav a{
-	color: #F2FFFC;
+main div {
+	width: 720px;
+	margin: auto;
+	padding: 30px 0;
 }
 
+aside {
+	text-align: center;
+}
 
+aside h1 {
+	font-size: 30px;
+	margin-bottom: 25px;
+}
 
+strong {
+	font-weight: bold;
+}
+
+em {
+	font-style: italic;
+}
+
+h2 {
+	font-size: 30px;
+}
