--- a/css/site.css
+++ b/css/site.css
@@ -9,7 +9,7 @@ h1, h2 {
 	font-family: "Open Sans Condensed", "Arial", sans-serif;
 }
 
-main h1 {
+.titulo {
 	text-align: center;
 	background-color: #851944;
 	color: #FFF;
@@ -23,7 +23,7 @@ p {
 	margin: 20px 0;
 }
 
-blockquote {
+.citacao{
 	background-color: #D9E5E3;
 	border: 10px solid #C2CCCA;
 	width: 250px;
@@ -31,18 +31,33 @@ blockquote {
 	margin: 20px 40px;
 }
 
-aside {
+.navegacao-site {
 	background-color: #3C1D3D;
 	color: #F2FFFC;
-}
-
-footer {
-	background-color: #000;
-	color: #F2FFFC;
+	text-align: center;
+	padding: 20px;
 }
 
 nav a {
 	color: #F2FFFC;
+}
+
+.icones-sociais li{
+	display: inline-block;	
+}
+
+#rodape-pagina{
+	background-color: #000;
+	color: #F2FFFC;
+}
+
+.leia-mais {
+    padding: 8px;
+    margin: 16px;
+    display: block;
+    font-size: 24px;
+    text-align: center;
+    background-color: #E6E7E8;
 }
 
 main a {
@@ -64,9 +79,6 @@ main div {
 	padding: 30px 0;
 }
 
-aside {
-	text-align: center;
-}
 
 aside h1 {
 	font-size: 30px;
@@ -83,4 +95,11 @@ em {
 
 h2 {
 	font-size: 30px;
+}
+
+
+article{
+	padding-bottom: 30px;
+	border-bottom: 1px solid #CCC;
+	margin-bottom: 20px;
 }
