--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,13 @@
+html, body {
+    height: 100%;
+    overflow-x: hidden;
+}
+
+body {
+    perspective: 6px;
+    perspective-origin: 50% 160px;
+}
+
 .inicio-post{
     background-color: #FFF;
     position: absolute;
@@ -29,7 +39,8 @@
 
 .saudacao-ultima-linha {
     text-align: right;
-    display: block;
+    display: inline-block;
+    transform: rotate(-5deg) skew(-10deg) ;
 }
 
 .saudacao strong {
@@ -128,65 +139,110 @@ main {
     float: none;
 }
 
+.palavras-home {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    font-size: 400%;
+}
+
 .palavra-home{
     position: absolute;
     font-family: 'Shadows Into Light', cursive;
     font-weight: bold;
     color: #D5447E;
+}
 
+.palavras-home, .titulo-principal {
+    transform-style: preserve-3d;
 }
 
 .eficiencia {
-    top: 20%;
-    left: 30%;
+    top: 50%;
+    left: 60%;
+    transform: translate(-50%, -50%) rotate(-5deg) translateZ(4px) scale(0.25);
 }
 
 .boas-praticas {
-    top: 10%;
-    left: 10%;
+    top: 70%;
+    left: 20%;
+    transform: translate(-50%, -50%) rotate(10deg) translateZ(1px) scale(0.25);
 }
 
 .codigo-limpo {
-    top: 60%;
-    left: 35%;
+    top: 45%;
+    left: 25%;
+    transform: translate(-50%, -50%) rotate(-10deg) translateZ(2px) scale(0.25);
 }
 
 .css3 {
-    top: 70%;
-    left: 25%;
+    top: 55%;
+    left: 35%;
+    transform: translate(-50%, -50%) rotate(5deg) translateZ(2px) scale(0.25);
 }
 
 .html5 {
-    top: 40%;
-    left: 80%;
+    top: 30%;
+    left: 65%;
+    transform: translate(-50%, -50%) rotate(10deg) translateZ(2px) scale(0.25);
 }
 
 .javascript {
-    top: 40%;
+    top: 15%;
     left: 60%;
+    transform: translate(-50%, -50%) rotate(-5deg) translateZ(1px) scale(0.25);
 }
 
 .acessibilidade {
-    top: 60%;
-    left: 70%;
+    top: 30%;
+    left: 35%;
+    transform: translate(-50%, -50%) rotate(-5deg) translateZ(3px) scale(0.25);
 }
 
 .responsivo {
-    top: 70%;
-    left: 80%;
+    top: 40%;
+    left: 40%;
+    transform: translate(-50%, -50%) rotate(10deg) translateZ(3px) scale(0.25);
 }
 
 .otimizacoes {
-    top: 30%;
-    left: 90%;
+    top: 70%;
+    left: 65%;
+    transform: translate(-50%, -50%) rotate(-5deg) translateZ(2px) scale(0.25);
 }
 
 .agilidade {
-    top: 25%;
-    left: 20%;
+    top: 75%;
+    left: 35%;
+    transform: translate(-50%, -50%) rotate(5deg) translateZ(1px) scale(0.25);
 }
 
 .design {
-    top: 20%;
-    left: 75%;
+    top: 40%;
+    left: 60%;
+    transform: translate(-50%, -50%) rotate(10deg) translateZ(2px) scale(0.25);
+}
+
+.banner-twitter{
+    width: 14em;
+    line-height: 1;
+    padding: 1em 0;
+    box-sizing: border-box;
+
+    text-align: center;
+    text-decoration: none;
+    background-color: #3C1D3D;
+    color: white;
+    border: .25em solid black;
+
+    font-size: 1.2em;
+    font-family: "Open Sans Condensed", sans-serif;
+
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform-origin: 0 0;
+    transform: translate(6.5754em, -2.4749em) rotate(45deg);
 }
