--- a/css/index.css
+++ b/css/index.css
@@ -23,6 +23,7 @@ body {
     -webkit-border-radius: 100%;
     -moz-border-radius: 50%;
     border-radius: 50%;
+    box-shadow: 0 0 1em #000;
 }
 
 .saudacao p {
@@ -63,6 +64,7 @@ body {
     margin: 2em auto;
     display: block;
     text-align: center;
+    box-shadow: 0 0 1em #FFF, inset 0 0 .5em #FFF;
 }
 
 .secao-inicio {
@@ -192,12 +194,14 @@ main {
 .javascript {
     top: 15%;
     left: 60%;
+    opacity: 0.3;
     transform: translate(-50%, -50%) rotate(-5deg) translateZ(1px) scale(0.25);
 }
 
 .acessibilidade {
     top: 30%;
     left: 35%;
+    opacity: 0.8;
     transform: translate(-50%, -50%) rotate(-5deg) translateZ(3px) scale(0.25);
 }
 
