--- a/css/site.css
+++ b/css/site.css
@@ -14,6 +14,7 @@ h2,
 h1 {
     text-transform: uppercase;
     font-size: 60px;
+    text-shadow: 5px 5px #000;
 }
 
 .titulo-principal {
@@ -67,6 +68,7 @@ main p {
     left: 0;
     width: 100%;
     box-sizing: border-box;
+    opacity: 0.3;
 }
 
 .container {
